some fixes for dyn form 2-col layout of h-lines and text divs, hide attributes fix for geo map components